feat: prepare EcoVision for Render field testing